# uSource-old

./: .gitignore  .gitmodules  Build32.sh  Build64.sh  CMakeLists.txt  GenerateProjects.sh  Jenkinsfile  README.md  uSource.kdev4  wscript
.clangd/index/: Action.cpp.D31FB98029EDFFE3.idx  Action.h.705D8A59F7F01D91.idx  AdvancedControls.cpp.7D3BC45D22AFDCEA.idx  Audio.cpp.2AC33A995D881924.idx  BMPUtils.h.31F66FA045C8109B.idx  BackgroundBitmap.cpp.345F1A3859FA34F1.idx  BackgroundBitmap.h.EC0275E231BBE7AB.idx  BaseArrayModel.h.726DC00CB3501845.idx  BaseClientWindow.cpp.429A238509184D9D.idx  BaseClientWindow.h.6190D688483B5BE0.idx  BaseFontBackend.cpp.C8584AEEB85BE923.idx  BaseFontBackend.h.BA5659CDE8CCD4FB.idx  BaseItem.cpp.1B89A75B42A79147.idx  BaseItem.h.E818254BCF09AD46.idx  BaseMenu.cpp.8E8268CB715E749C.idx  BaseMenu.h.02074864CAA582E2.idx  BaseModel.h.F85841A080B1A995.idx  BaseWindow.cpp.EA4B9125F36A1815.idx  BaseWindow.h.065E27B1D3077DBB.idx  Bitmap.cpp.D1FB2F897576602B.idx  Color.h.C076632DB9E5458D.idx  (+509 more)
.kdev4/: uSource.kdev4
Mathlib/: CMakeLists.txt
Tier0/: CMakeLists.txt  SystemInfo.h
Tier1/: CMakeLists.txt
common/: bsp20file.h  com_model.h  common.h  const.h  mathlib.h  port.h  types.h  xash3d_types.h
docs/: model_structure.md
engine/: CMakeLists.txt  cdll_int.h  client_int.h  client_interface.h  demo_int.h  efx_int.h  eiface.h  engine_common.h  engine_int.h  event_int.h  log_int.h  net_int.h  ref_int.h  server_int.h  studio.h  studio_int.h  wscript
engine/client/: cl_cmds.cpp  cl_custom.cpp  cl_debug.cpp  cl_demo.cpp  cl_efrag.cpp  cl_efx.cpp  cl_events.cpp  cl_frame.cpp  cl_game.cpp  cl_gameui.cpp  cl_main.cpp  cl_mobile.cpp  cl_netgraph.cpp  cl_parse.cpp  cl_pmove.cpp  cl_qparse.cpp  cl_remap.cpp  cl_render.cpp  cl_scrn.cpp  cl_tent.cpp  cl_video.cpp  cl_view.cpp  client.h  console.cpp  in_joy.cpp  in_touch.cpp  input.cpp  keys.cpp  mod_dbghulls.cpp  ref_common.cpp  ref_common.h  s_dsp.cpp  s_load.cpp  s_main.cpp  s_mix.cpp  s_mouth.cpp  s_stream.cpp  s_utils.cpp  s_vox.cpp  titles.cpp  (+1 more)
engine/client/avi/: avi_stub.cpp  avi_win.cpp
engine/client/vgui/: vgui_draw.cpp
engine/common/: base_cmd.cpp  cfgscript.cpp  cmd.cpp  common.cpp  common.h  cvar.cpp  cvar.h  filesystem.cpp  gameinfo.cpp  host.cpp  identification.cpp  infostring.cpp  lib_common.cpp  mod_bmodel.cpp  mod_bsp20.cpp  mod_gltf.cpp  mod_local.h  mod_studio.cpp  model.cpp  net_ws.cpp  sequence.cpp  sys_con.cpp  system.cpp  system.h
engine/common/imagelib/: imagelib.h  img_main.cpp  img_png.cpp  img_utils.cpp
engine/common/logsystem/: logsystem.cpp
engine/common/soundlib/: soundlib.h
engine/common/soundlib/libmpg/: frame.cpp  index.cpp  libmpg.cpp  mpg123.cpp  parse.cpp  synth.cpp
engine/platform/: platform.h
engine/platform/posix/: lib_posix.cpp
engine/platform/sdl/: events.cpp  in_sdl.cpp  s_sdl.cpp  sys_sdl.cpp  vid_sdl.cpp
engine/server/: server.h  sv_client.cpp  sv_cmds.cpp  sv_custom.cpp  sv_filter.cpp  sv_frame.cpp  sv_game.cpp  sv_init.cpp  sv_log.cpp  sv_main.cpp  sv_move.cpp  sv_phys.cpp  sv_pmove.cpp  sv_save.cpp  sv_world.cpp
game_launch/: CMakeLists.txt  game.cpp
mathlib/: CMakeLists.txt  mathlib.cpp  mathlib.h  matrix.cpp  matrix.h  mconst.h  plane.h  vector.cpp  vector.h  wscript
pm_shared/: pm_math.cpp  pm_shared.cpp
public/: CMakeLists.txt  appframework.cpp  appframework.h  crclib.cpp  crtlib.cpp  crtlib.h  keyvalues.cpp  keyvalues.h  matrixlib.cpp  threadtools.cpp  threadtools.h  wscript
public/containers/: array.h  list.h  string.cpp  string.h
public/util/: cli_utl.cpp  cli_utl.h
ref_gl/: gl_context.cpp  gl_dbghulls.cpp  gl_export.h  gl_image.cpp  gl_local.h  gl_opengl.cpp  gl_rlight.cpp  gl_rpart.cpp  gl_rsurf.cpp  gl_studio.cpp  wscript
rendersystem/: gl_alias.cpp  gl_backend.cpp  gl_beams.cpp  gl_context.cpp  gl_decals.cpp  gl_local.h  gl_rmain.cpp  gl_rmisc.cpp  gl_sprite.cpp  gl_studio.cpp  gl_vgui.cpp  gl_warp.cpp  ibuffer.h  imaterial.h  imesh.h  ishader.h  material.h  rendersystem.h  wscript
tier1/: concommand.cpp  concommand.h  convar.cpp  convar.h  tier1.cpp  tier1.h  wscript
(+174 files in other folders)
